--- a/Alicargo/Views/Calculation/Details.cshtml
+++ b/Alicargo/Views/Calculation/Details.cshtml
@@ -1,59 +1,167 @@
 ﻿@using Resources
+<tr class="k-group-sub-footer-gray">
+	<td class='k-group-cell'>&nbsp;</td>
+	<td colspan="20">&nbsp;</td>
+</tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="4"><b>sender</b></td>
-	<td title="@Entities.CostPerKgOfSender">#= kendo.toString(CostPerKgOfSender, 'n2') #</td>
-	<td colspan="2">&nbsp;</td>
-	<td title="@Entities.TotalSenderRate">#= kendo.toString(TotalSenderRate, 'n2') #</td>
-	<td colspan="4">&nbsp;</td>
-	<td title="@Entities.TotalScotchCost">#= TotalScotchCost #</td>
+	<td><b>sender</b></td>
 	<td>&nbsp;</td>
-	<td title="@Entities.FactureCost">#= TotalFactureCost #</td>
-	<td title="@Entities.WithdrawCost">#= TotalWithdrawCost #</td>
-	<td colspan="2">&nbsp;</td>
-	<td class="total" title="@Entities.TotalOfSender">#= kendo.toString(TotalOfSender, 'n2') #</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right" title="@Entities.CostPerKgOfSender">#= kendo.toString(CostPerKgOfSender, 'n2') #</td>
+	<td class="text-right text-bold" title="@Entities.TotalSenderRate">#= kendo.toString(TotalSenderRate, 'n2') #</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right text-bold" title="@Entities.TotalScotchCost">#= TotalScotchCost #</td>
+	<td>&nbsp;</td>
+	<td class="text-right text-bold" title="@Entities.FactureCost">#= TotalFactureCost #</td>
+	<td class="text-right text-bold" title="@Entities.WithdrawCost">#= TotalWithdrawCost #</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right total label-inverse" title="@Entities.TotalOfSender">#= kendo.toString(TotalOfSender, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="7"><b>flight</b></td>
-	<td title="@Entities.FlightCostPerKg">#= kendo.toString(FlightCostPerKg, 'n2') #</td>
-	<td colspan="10">&nbsp;</td>
-	<td class="total" title="@Entities.FlightCost">#= kendo.toString(FlightCost, 'n2') #</td>
+	<td><b>flight</b></td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right text-bold" title="@Entities.FlightCostPerKg">#= kendo.toString(FlightCostPerKg, 'n2') #</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right total label-inverse" title="@Entities.FlightCost">#= kendo.toString(FlightCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="7"><b>custom</b></td>
-	<td title="@Entities.CustomCostPerKg">#= kendo.toString(CustomCostPerKg, 'n2') #</td>
-	<td colspan="10">&nbsp;</td>
-	<td class="total" title="@Entities.CustomCost">#= kendo.toString(CustomCost, 'n2') #</td>
+	<td><b>custom</b></td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right text-bold" title="@Entities.CustomCostPerKg">#= kendo.toString(CustomCostPerKg, 'n2') #</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right total" title="@Entities.CustomCost">#= kendo.toString(CustomCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="7"><b>broker</b></td>
-	<td title="@Entities.BrokerCostPerKg">#= kendo.toString(BrokerCostPerKg, 'n2') #</td>
-	<td colspan="10">&nbsp;</td>
-	<td class="total" title="@Entities.BrokerCost">#= kendo.toString(BrokerCost, 'n2') #</td>
+	<td><b>broker</b></td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right text-bold" title="@Entities.BrokerCostPerKg">#= kendo.toString(BrokerCostPerKg, 'n2') #</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right total" title="@Entities.BrokerCost">#= kendo.toString(BrokerCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="18"><b>insurance</b></td>
-	<td class="total" title="@Entities.Insurance">#= kendo.toString(TotalInsuranceCost, 'n2') #</td>
+	<td><b>insurance</b></td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right total" title="@Entities.Insurance">#= kendo.toString(TotalInsuranceCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="18"><b>forwarder</b></td>
-	<td class="total" title="@Entities.TotalForwarderCost">#= kendo.toString(TotalTransitCost, 'n2') #</td>
+	<td><b>forwarder</b></td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right total" title="@Entities.TotalForwarderCost">#= kendo.toString(TotalTransitCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="18"><b>additional</b></td>
-	<td title="@Entities.AdditionalCost" class="additional-cost">
+	<td><b>additional</b></td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td title="@Entities.AdditionalCost" class="additional-cost text-right">
 		<input type="number" min="0" max="1000000" value="#= kendo.toString(AdditionalCost, 'n2') #" />
 	</td>
 	<td>&nbsp;</td>
@@ -61,14 +169,29 @@
 <tr class="k-group-sub-footer cost-total">
 	<td class='k-group-cell'>&nbsp;</td>
 	<td colspan="18"><b>cost total</b></td>
-	<td class="total" title="@Entities.TotalExpenses">#= kendo.toString(TotalExpenses, 'n2') #</td>
+	<td class="text-right total" title="@Entities.TotalExpenses">#= kendo.toString(TotalExpenses, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
-	<td colspan="16">&nbsp;</td>
-	<td><b>Total profit:</b></td>
-	<td title="@Entities.ProfitPerKg">#= kendo.toString(ProfitPerKg, 'n2') #</td>
-	<td class="total" title="@Entities.TotalProfit">#= kendo.toString(Profit, 'n2') #</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td>&nbsp;</td>
+	<td class="text-right text-bold" style="color: red" title="@Entities.ProfitPerKg">#= kendo.toString(ProfitPerKg, 'n2') #</td>
+	<td class="text-right total" title="@Entities.TotalProfit">#= kendo.toString(Profit, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
