--- a/Alicargo/Views/Calculation/Details.cshtml
+++ b/Alicargo/Views/Calculation/Details.cshtml
@@ -138,7 +138,7 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
-	<td class="text-right total" title="@Entities.TotalForwarderCost">#= kendo.toString(TotalTransitCost, 'n2') #</td>
+	<td class="text-right total" title="@Entities.TotalTransitCost">#= kendo.toString(TotalTransitCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
