--- a/Alicargo/Views/Client/Edit.cshtml
+++ b/Alicargo/Views/Client/Edit.cshtml
@@ -2,10 +2,5 @@
 @using Resources
 @model ClientModel
 
-<h1>
-	@Pages.ClientEdit
-	<span>
-		@Html.ActionLink(Pages.DownloadCalculations, MVC.Client.Calculations((long)ViewBag.ClientId), new { @class = "btn btn-info" })
-	</span>
-</h1>
+<h1>@Pages.ClientEdit</h1>
 @Html.EditPage(Url.Action(MVC.Client.Edit()), Pages.Save)
