fixed calculation of profit

--- a/Alicargo/Views/Calculation/Details.cshtml
+++ b/Alicargo/Views/Calculation/Details.cshtml
@@ -11,6 +11,7 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
+	<td>&nbsp;</td>
 	<td class="text-right" title="@Entities.CostPerKgOfSender">#= kendo.toString(CostPerKgOfSender, 'n2') #</td>
 	<td class="text-right text-bold" title="@Entities.TotalSenderRate">#= kendo.toString(TotalSenderRate, 'n2') #</td>
 	<td>&nbsp;</td>
@@ -22,13 +23,13 @@
 	<td class="text-right text-bold" title="@Entities.FactureCost">#= TotalFactureCost #</td>
 	<td class="text-right text-bold" title="@Entities.WithdrawCost">#= TotalWithdrawCost #</td>
 	<td>&nbsp;</td>
-	<td>&nbsp;</td>
-	<td class="text-right total label-inverse" title="@Entities.TotalOfSender">#= kendo.toString(TotalOfSender, 'n2') #</td>
+	<td class="text-right total" title="@Entities.TotalOfSender">#= kendo.toString(TotalOfSender, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
 	<td class='k-group-cell'>&nbsp;</td>
 	<td><b>flight</b></td>
+	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
@@ -45,8 +46,7 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
-	<td>&nbsp;</td>
-	<td class="text-right total label-inverse" title="@Entities.FlightCost">#= kendo.toString(FlightCost, 'n2') #</td>
+	<td class="text-right total" title="@Entities.FlightCost">#= kendo.toString(FlightCost, 'n2') #</td>
 	<td>&nbsp;</td>
 </tr>
 <tr class="k-group-sub-footer">
@@ -58,8 +58,8 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
-	<td class="text-right text-bold" title="@Entities.CustomCostPerKg">#= kendo.toString(CustomCostPerKg, 'n2') #</td>
 	<td>&nbsp;</td>
+	<td class="text-right text-bold" title="@Entities.CustomCostPerKg">#= kendo.toString(CustomCostPerKg, 'n2') #</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
@@ -81,8 +81,8 @@
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
-	<td class="text-right text-bold" title="@Entities.BrokerCostPerKg">#= kendo.toString(BrokerCostPerKg, 'n2') #</td>
 	<td>&nbsp;</td>
+	<td class="text-right text-bold" title="@Entities.BrokerCostPerKg">#= kendo.toString(BrokerCostPerKg, 'n2') #</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
 	<td>&nbsp;</td>
