--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -8,7 +8,7 @@
 	{
 		<li>@Html.ActionLink(Pages.Applications, MVC.ApplicationList.Index())</li>
 		<li>@Html.ActionLink(Pages.Profile, MVC.Client.Edit())</li>
-		<li>@Html.ActionLink(Pages.Calculation, MVC.ClientCalculation.Index())</li>
+		<li>@Html.ActionLink(Pages.Report, MVC.ClientCalculation.Index())</li>
 	}
 }
 
