edit class in calculation

--- a/Alicargo/Views/DynamicScript/Localization.cshtml
+++ b/Alicargo/Views/DynamicScript/Localization.cshtml
@@ -24,6 +24,7 @@ $a.Localization = (function($l){
 
 @Generate("$l.Entities_", Entities.ResourceManager, typeof(Entities))
 @Generate("$l.Pages_", Pages.ResourceManager, typeof(Pages))
+@Generate("$l.Enums_", Enums.ResourceManager, typeof(Enums))
 
 return $l;
 }($a.Localization || {}));
