--- a/Alicargo/Content/app/kendo.css
+++ b/Alicargo/Content/app/kendo.css
@@ -30,3 +30,7 @@
 .k-grid-custom-gear span {
 	background-position: -142px -114px;
 }
+
+.k-grid-custom-cancel span {
+	background-position: -49px -49px;
+}
