moved app scripts to bundle

--- a/Alicargo/Views/AirWaybill/Index.cshtml
+++ b/Alicargo/Views/AirWaybill/Index.cshtml
@@ -36,10 +36,5 @@ else if (IdentityService.IsInRole(RoleType.Sender))
 			@Html.Partial("AdminDetails")
 		}
 	</script>
-	@Scripts.Render(Url.Action(MVC.DynamicScript.Roles()))
-	@Scripts.Render(Url.Action(MVC.DynamicScript.Localization()))
-	@Scripts.Render(Url.Action(MVC.DynamicScript.Urls()))
-	@Scripts.Render("~/Scripts/app/Alicargo.js")
-	@Scripts.Render("~/Scripts/app/AirWaybill/Columns.js")
-	@Scripts.Render("~/Scripts/app/AirWaybill/Grid.js")
+	@Scripts.Render(PathConstants.AwbListJs)
 }
