--- a/Alicargo/Views/Calculation/Index.cshtml
+++ b/Alicargo/Views/Calculation/Index.cshtml
@@ -12,7 +12,5 @@
 	<script type="text/x-kendo-template" id="calculation-grid-details-template">
         @Html.Partial("Details")
 	</script>
-	@Scripts.Render("~/Scripts/app/Alicargo.js")
-	@Scripts.Render("~/scripts/app/calculation/admin/Columns.js")
-	@Scripts.Render("~/scripts/app/calculation/admin/Grid.js")	
+	@Scripts.Render(PathConstants.CalculationJs)
 }
