--- a/Alicargo/Views/Client/Index.cshtml
+++ b/Alicargo/Views/Client/Index.cshtml
@@ -11,6 +11,5 @@
 <div id="client-grid" class="grid"></div>
 @section scripts
 {
-	@Scripts.Render("~/Scripts/app/Alicargo.js")
-	@Scripts.Render("~/Scripts/app/Client/Grid.js")
+	@Scripts.Render(PathConstants.ClientListJs)
 }
