--- a/Alicargo/Views/ClientCalculation/Index.cshtml
+++ b/Alicargo/Views/ClientCalculation/Index.cshtml
@@ -9,7 +9,5 @@
 
 @section scripts
 {
-	@Scripts.Render("~/Scripts/app/Alicargo.js")
-	@Scripts.Render("~/scripts/app/calculation/client/Columns.js")
-	@Scripts.Render("~/scripts/app/calculation/client/Grid.js")	
+	@Scripts.Render(PathConstants.ClientCalculationJs)	
 }
