--- a/Alicargo/Views/User/Index.cshtml
+++ b/Alicargo/Views/User/Index.cshtml
@@ -3,45 +3,42 @@
 @model RoleType
 <style>
 	.container {
-		width: auto;
 		padding: 0 20px;
+		width: auto;
 	}
 </style>
 <h3>
 	@switch (Model)
- {
-	 case RoleType.Admin:
-		@Pages.Admins
-		 break;
+	{
+		case RoleType.Admin:
+			@Pages.Admins
+			break;
 
-	 case RoleType.Sender:
-		@Pages.Senders
-		 break;
-	 case RoleType.Broker:
-		@Pages.Brokers
-		 break;
+		case RoleType.Sender:
+			@Pages.Senders
+			break;
+		case RoleType.Broker:
+			@Pages.Brokers
+			break;
 
-	 case RoleType.Forwarder:
-		@Pages.Forwarders
-		 break;
+		case RoleType.Forwarder:
+			@Pages.Forwarders
+			break;
 
-	 case RoleType.Client:
-		@Pages.Clients
-		 break;
+		case RoleType.Client:
+			@Pages.Clients
+			break;
 
-	 default:
-		 throw new ArgumentOutOfRangeException();
- }
-	@Html.ActionLink(Pages.Add, MVC.User.Create(Model), new { @class = "btn btn-link" })
+		default:
+			throw new ArgumentOutOfRangeException();
+	}
+	@Html.ActionLink(Pages.Add, MVC.User.Create(Model), new {@class = "btn btn-link"})
 </h3>
 <div id="user-grid" class="grid"></div>
 @section scripts
 {
-	@Scripts.Render("~/Scripts/app/Alicargo.js")
-	@Scripts.Render("~/Scripts/app/User/Grid.js")
+	@Scripts.Render(PathConstants.UserListJs)
 	<script>
-		$(function () {
-			Alicargo.Users.Init('@Model');
-		});
+		$(function() { Alicargo.Users.Init('@Model'); });
 	</script>
 }
