--- a/Alicargo/Views/SenderApplication/Create.cshtml
+++ b/Alicargo/Views/SenderApplication/Create.cshtml
@@ -6,4 +6,4 @@
 	@Pages.ApplicationAdd
 	<span>@Entities.Nic: @ViewBag.Nic</span>
 </h1>
-@Html.EditPage(Url.Action(MVC.Sender.ApplicationCreate()), Pages.Save)
+@Html.EditPage(Url.Action(MVC.SenderApplication.Create()), Pages.Save)
