--- a/Alicargo/Views/SenderApplication/Edit.cshtml
+++ b/Alicargo/Views/SenderApplication/Edit.cshtml
@@ -6,4 +6,4 @@
 	@Pages.ApplicationEdit @ViewBag.ApplicationNumber
 	<span>@Entities.Nic: @ViewBag.Nic</span>
 </h1>
-@Html.EditPage(Url.Action(MVC.Sender.ApplicationEdit()), Pages.Save)
+@Html.EditPage(Url.Action(MVC.SenderApplication.Edit()), Pages.Save)
