--- a/Alicargo/Views/ApplicationList/Tools.cshtml
+++ b/Alicargo/Views/ApplicationList/Tools.cshtml
@@ -11,7 +11,7 @@
 			Text = x.Value,
 			Value = IdentityService.IsInRole(RoleType.Admin)
 				? Url.Action(MVC.Application.Create(x.Key))
-				: Url.Action(MVC.Sender.ApplicationCreate(x.Key))
+				: Url.Action(MVC.SenderApplication.Create(x.Key))
 		}))
 		<a href="#" class="btn btn-primary" id="apply-link">@Pages.ApplicationAdd</a>
 		@Html.ActionLink(Pages.Excel, MVC.Excel.Applications(), new { @class = "btn btn-info" })
