added sender controller

--- a/Alicargo/Views/Client/Create.cshtml
+++ b/Alicargo/Views/Client/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
-@model ClientModel
+@model Alicargo.ViewModels.User.ClientModel
 
 <h1>@Resources.Pages.ClientAdd</h1>
 @Html.EditPage(Url.Action(MVC.Client.Create()), Resources.Pages.Add)
