--- a/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
+++ b/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
-@model ClientModel
+@model Alicargo.ViewModels.User.ClientModel
 
 <div class="row">
 	<div class="span8">
