implemented sender edit with TDD (sic!)

--- a/Alicargo/Views/Sender/Create.cshtml
+++ b/Alicargo/Views/Sender/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
-@model ApplicationSenderModel
+@model Alicargo.ViewModels.User.SenderModel
 
 <h1>
 	@Pages.SenderAdd
