--- a/Alicargo/Views/Sender/Edit.cshtml
+++ b/Alicargo/Views/Sender/Edit.cshtml
@@ -1,1 +1,8 @@
-﻿
+﻿@using Alicargo.MvcHelpers.Extensions
+@using Resources
+@model Alicargo.ViewModels.User.SenderModel
+
+<h1>
+	@Pages.SenderAdd
+</h1>
+@Html.EditPage(Url.Action(MVC.Sender.Edit()), Pages.Save)
