--- a/Alicargo/Views/Sender/Edit.cshtml
+++ b/Alicargo/Views/Sender/Edit.cshtml
@@ -3,6 +3,6 @@
 @model Alicargo.ViewModels.User.SenderModel
 
 <h1>
-	@Pages.SenderAdd
+	@Pages.SenderEdit
 </h1>
 @Html.EditPage(Url.Action(MVC.Sender.Edit()), Pages.Save)
