fixed display of tape cost for sender

--- a/Alicargo/Views/ApplicationList/SenderDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderDetails.cshtml
@@ -108,10 +108,10 @@
 	#= FactureCost #
 </p>
 # } #
-# if(ScotchCost != null){ #
+# if(SenderScotchCost != null){ #
 <p>
 	<span>@Entities.ScotchCost:</span>
-	#= ScotchCost #
+	#= SenderScotchCost #
 </p>
 # } #
 # if(WithdrawCost != null){ #
