added sender calculation controller

--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -46,6 +46,7 @@
 	{
 		<li>@Html.ActionLink(Pages.Applications, MVC.ApplicationList.Index())</li>
 		<li>@Html.ActionLink(Entities.AirWaybill, MVC.AirWaybill.Index())</li>
+		<li>@Html.ActionLink(Pages.Report, MVC.SenderCalculation.Index())</li>
 	}
 }
 
