details for sender calculation

--- a/Alicargo/Views/SenderCalculation/Index.cshtml
+++ b/Alicargo/Views/SenderCalculation/Index.cshtml
@@ -9,5 +9,8 @@
 
 @section scripts
 {
+	<script type="text/x-kendo-template" id="calculation-grid-details-template">
+        @Html.Partial("Details")
+	</script>
 	@Scripts.Render(PathConstants.SenderCalculationJs)	
 }
