--- a/Alicargo/Content/app/entity.css
+++ b/Alicargo/Content/app/entity.css
@@ -174,6 +174,10 @@
 	background-color: #ffff00;
 }
 
+#calculation-grid .k-grouping-row td a {
+	color: #2e2e2e;
+}
+
 #calculation-grid .k-group-sub-footer td.total {
 	font-weight: bold;
 }
