renamed withdraw to pickup

--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -69,10 +69,10 @@
 		@Html.EditorWithLabelFor(model => model.ScotchCostEdited)
 	</div>
 	<div class="span2">
-		@Html.EditorWithLabelFor(model => model.WithdrawCost)
+		@Html.EditorWithLabelFor(model => model.PickupCost)
 	</div>
 	<div class="span2">
-		@Html.EditorWithLabelFor(model => model.WithdrawCostEdited)
+		@Html.EditorWithLabelFor(model => model.PickupCostEdited)
 	</div>
 </div>
 <hr />
