--- a/Alicargo/Views/ApplicationList/AdminDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminDetails.cshtml
@@ -175,10 +175,10 @@
 	#= TransitCost #
 </p>
 # } #
-# if(WithdrawCost != null){ #
+# if(PickupCost != null){ #
 <p>
-	<span>@Entities.WithdrawCost:</span>
-	#= WithdrawCost #
+	<span>@Entities.PickupCost:</span>
+	#= PickupCost #
 </p>
 # } #
 # if(InvoiceFileName != null){ #
