--- a/Alicargo/Views/ApplicationList/ClientDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientDetails.cshtml
@@ -175,9 +175,9 @@
 	#= TransitCost #
 </p>
 # } #
-# if(WithdrawCost != null){ #
+# if(PickupCost != null){ #
 <p>
-	<span>@Entities.WithdrawCost:</span>
-	#= WithdrawCost #
+	<span>@Entities.PickupCost:</span>
+	#= PickupCost #
 </p>
 # } #
