--- a/Alicargo/Views/ApplicationList/SenderDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderDetails.cshtml
@@ -114,10 +114,10 @@
 	#= SenderScotchCost #
 </p>
 # } #
-# if(WithdrawCost != null){ #
+# if(PickupCost != null){ #
 <p>
-	<span>@Entities.WithdrawCost:</span>
-	#= WithdrawCost #
+	<span>@Entities.PickupCost:</span>
+	#= PickupCost #
 </p>
 # } #
 # if(InvoiceFileName != null){ #
