--- a/Alicargo/Views/Calculation/Details.cshtml
+++ b/Alicargo/Views/Calculation/Details.cshtml
@@ -21,7 +21,7 @@
 	<td class="text-right text-bold" title="@Entities.TotalScotchCost">#= TotalScotchCost #</td>
 	<td>&nbsp;</td>
 	<td class="text-right text-bold" title="@Entities.FactureCost">#= TotalFactureCost #</td>
-	<td class="text-right text-bold" title="@Entities.WithdrawCost">#= TotalWithdrawCost #</td>
+	<td class="text-right text-bold" title="@Entities.PickupCost">#= TotalPickupCost #</td>
 	<td>&nbsp;</td>
 	<td class="text-right total" title="@Entities.TotalOfSender">#= kendo.toString(TotalOfSender, 'n2') #</td>
 	<td>&nbsp;</td>
