--- a/Alicargo/Views/SenderCalculation/Details.cshtml
+++ b/Alicargo/Views/SenderCalculation/Details.cshtml
@@ -17,7 +17,7 @@
 	<td class="text-right text-bold" title="@Entities.TotalSenderRate">#= kendo.toString(TotalSenderRate, 'n2') #</td>
 	<td class="text-right text-bold" title="@Entities.TotalScotchCost">#= TotalScotchCost #</td>
 	<td class="text-right text-bold" title="@Entities.FactureCost">#= TotalFactureCost #</td>
-	<td class="text-right text-bold" title="@Entities.WithdrawCost">#= TotalWithdrawCost #</td>
+	<td class="text-right text-bold" title="@Entities.PickupCost">#= TotalPickupCost #</td>
 	<td class="text-right total" title="@Entities.TotalOfSender">#= kendo.toString(TotalOfSender, 'n2') #</td>
 </tr>
 <tr class="k-group-sub-footer">
