--- a/Alicargo/Views/SenderApplication/EditorTemplates/ApplicationSenderModel.cshtml
+++ b/Alicargo/Views/SenderApplication/EditorTemplates/ApplicationSenderModel.cshtml
@@ -16,7 +16,7 @@
 	</div>
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.FactureCost)
-		@Html.EditorWithLabelFor(model => model.WithdrawCost)
+		@Html.EditorWithLabelFor(model => model.PickupCost)
 		@Html.EditorWithLabelFor(model => model.Volume)
 	</div>
 </div>
