--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -6,53 +6,28 @@
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.FactoryName)
 		@Html.EditorWithLabelFor(model => model.MarkName)
-	</div>
-	<div class="span4">
-		@Html.LabelFor(model => model.FactoryContact)
-		<div>
-			@Html.TextAreaFor(model => model.FactoryContact)
-		</div>
-	</div>
-	<div class="span4">
-		@Html.EditorWithLabelFor(model => model.FactoryEmail)
-		@Html.EditorWithLabelFor(model => model.FactoryPhone)
-	</div>
-</div>
-<div class="row">
-	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.Invoice)
-	</div>
-	<div class="span8">
-		@Html.EditorWithLabelFor(model => model.Characteristic)
-	</div>
-</div>
-<div class="row">
-	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.Weigth)
-	</div>
-	<div class="span4">
-		@Html.EditorWithLabelFor(model => model.AddressLoad)
-	</div>
-	<div class="span4">
-		@Html.LabelFor(x => x.CountryId)
-		@Html.DropDownListFor(x => x.CountryId, (IDictionary<long, string>)ViewBag.Countries)
-	</div>
-</div>
-<div class="row">
-	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.Count)
 		<label for="@Html.IdFor(x => x.Volume)">@Entities.Volume (m<span class="super">3</span>)</label>
 		@Html.EditorFor(model => model.Volume)
+		
+	</div>
+	<div class="span4">
+		@Html.EditorWithLabelFor(model => model.FactoryContact)
+		@Html.EditorWithLabelFor(model => model.Characteristic)
+		@Html.EditorWithLabelFor(model => model.AddressLoad)
+		@Html.EditorWithLabelFor(model => model.TermsOfDelivery)
+		@Html.LabelFor(model => model.MethodOfDelivery)
+		@Html.DropDownListForEnum(model => model.MethodOfDelivery)
 		@Html.LabelFor(x => x.SenderId)
 		@Html.DropDownListFor(x => x.SenderId, (IDictionary<long, string>)ViewBag.Senders, "")
 	</div>
 	<div class="span4">
-		@Html.EditorWithLabelFor(model => model.TermsOfDelivery)
-		@Html.LabelFor(model => model.MethodOfDelivery)
-		@Html.DropDownListForEnum(model => model.MethodOfDelivery)
-		@Html.EditorWithLabelFor(model => model.TransitCost)
-	</div>
-	<div class="span4">
+		@Html.EditorWithLabelFor(model => model.FactoryEmail)
+		@Html.EditorWithLabelFor(model => model.FactoryPhone)
+		@Html.LabelFor(x => x.CountryId)
+		@Html.DropDownListFor(x => x.CountryId, (IDictionary<long, string>)ViewBag.Countries)
 		@Html.EditorWithLabelFor(model => model.WarehouseWorkingTime)
 		@Html.EditorWithLabelFor(model => model.Currency)
 		@Html.EditorWithLabelFor(model => model.TariffPerKg)
@@ -64,6 +39,9 @@
 	</div>
 	<div class="span2">
 		@Html.EditorWithLabelFor(model => model.FactureCostEdited)
+	</div>
+	<div class="span2">
+		@Html.EditorWithLabelFor(model => model.TransitCost)
 	</div>
 	<div class="span2">
 		@Html.EditorWithLabelFor(model => model.ScotchCostEdited)
@@ -85,34 +63,26 @@
 		@Helpers.FileUploader(Html.IdFor(x => x.Torg12File).ToHtmlString(), Model == null
 			? null
 			: Model.Torg12FileName)
-	</div>
-	<div class="span4">
-		@Html.LabelFor(model => model.CPFile)
-		@Helpers.FileUploader(Html.IdFor(x => x.CPFile).ToHtmlString(), Model == null
-			? null
-			: Model.CPFileName)
-	</div>
-	<div class="span4">
-		@Html.LabelFor(model => model.DeliveryBillFile)
-		@Helpers.FileUploader(Html.IdFor(x => x.DeliveryBillFile).ToHtmlString(), Model == null
-			? null
-			: Model.DeliveryBillFileName)
-	</div>
-</div>
-<div class="row">
-	<div class="span4">
 		@Html.LabelFor(model => model.InvoiceFile)
 		@Helpers.FileUploader(Html.IdFor(x => x.InvoiceFile).ToHtmlString(), Model == null
 			? null
 			: Model.InvoiceFileName)
 	</div>
 	<div class="span4">
+		@Html.LabelFor(model => model.CPFile)
+		@Helpers.FileUploader(Html.IdFor(x => x.CPFile).ToHtmlString(), Model == null
+			? null
+			: Model.CPFileName)
 		@Html.LabelFor(model => model.SwiftFile)
 		@Helpers.FileUploader(Html.IdFor(x => x.SwiftFile).ToHtmlString(), Model == null
 			? null
 			: Model.SwiftFileName)
 	</div>
 	<div class="span4">
+		@Html.LabelFor(model => model.DeliveryBillFile)
+		@Helpers.FileUploader(Html.IdFor(x => x.DeliveryBillFile).ToHtmlString(), Model == null
+			? null
+			: Model.DeliveryBillFileName)
 		@Html.LabelFor(model => model.PackingFile)
 		@Helpers.FileUploader(Html.IdFor(x => x.PackingFile).ToHtmlString(), Model == null
 			? null
