--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -42,6 +42,7 @@
 	</div>
 	<div class="span2">
 		@Html.EditorWithLabelFor(model => model.TransitCost)
+		@Html.EditorWithLabelFor(model => model.TransitCostEdited)
 	</div>
 	<div class="span2">
 		@Html.EditorWithLabelFor(model => model.ScotchCostEdited)
