fixed misspell of weight word

--- a/Alicargo/Views/Application/DisplayTemplates/ApplicationDetailsModel.cshtml
+++ b/Alicargo/Views/Application/DisplayTemplates/ApplicationDetailsModel.cshtml
@@ -30,7 +30,7 @@
 </div>
 <div class="row">
 	<div class="span4">
-		@Html.DisplayWithLabelFor(model => model.Weigth)
+		@Html.DisplayWithLabelFor(model => model.Weight)
 	</div>
 	<div class="span4">
 		@Html.DisplayWithLabelFor(model => model.AddressLoad)
