--- a/Alicargo/Views/ApplicationList/ClientDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientDetails.cshtml
@@ -37,10 +37,10 @@
 	#= Volume #
 </p>
 # } #
-# if(Weigth != null){ #
+# if(Weight != null){ #
 <p>
-	<span>@Entities.Weigth:</span>
-	#= Weigth #
+	<span>@Entities.Weight:</span>
+	#= Weight #
 </p>
 # } #
 # if(Characteristic != null){ #
