--- a/Alicargo/Content/app/kendo.css
+++ b/Alicargo/Content/app/kendo.css
@@ -34,3 +34,7 @@
 .k-grid-custom-cancel span {
 	background-position: -49px -49px;
 }
+
+.k-grid-custom-authenticate span {
+	background-position: -49px -241px;
+}
