added actions for calculation excels

--- a/Alicargo/Views/SenderCalculation/Index.cshtml
+++ b/Alicargo/Views/SenderCalculation/Index.cshtml
@@ -1,10 +1,14 @@
-﻿@inherits BaseWebViewPage
+﻿@using Resources
+@inherits BaseWebViewPage
 <style>
 	.container {
 		padding: 0 20px;
 		width: auto;
 	}
 </style>
+<p>
+	@Html.ActionLink(Pages.Excel, MVC.SenderCalculation.Excel(), new { @class = "btn btn-info" })
+</p>
 <div id="calculation-grid" class="grid"></div>
 
 @section scripts
