added states list page

--- a/Alicargo/Views/State/Index.cshtml
+++ b/Alicargo/Views/State/Index.cshtml
@@ -6,9 +6,9 @@
 	}
 </style>
 <h3>
-	@Html.ActionLink(Pages.Add, MVC.Sender.Create(), new {@class = "btn btn-link"})
+	@Html.ActionLink(Pages.Add, MVC.State.Create(), new {@class = "btn btn-link"})
 </h3>
-<div id="user-grid" class="grid"></div>
+<div id="state-grid" class="grid"></div>
 @section scripts
 {
 	@Scripts.Render(PathConstants.StateListJs)
